# DCMS-server

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  debugutils.cpp  debugutils.h  idoknow.qrc  main.cpp  server.cpp  server.h
configs/: config.txt
